# pyscard

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  ACKS  ChangeLog  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PKG-INFO  README  README.md  TODO  appveyor.yml  dev-requirements.txt  pyproject.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  actionlint.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql.yml  windows.yml  windows_all.yml  windows_x86.yml
appveyor/: install.ps1  run_with_env.cmd
debian/: changelog  control  copyright
epydoc/: build-api.sh  sync.sh
smartcard/: ACKS  ATR.py  AbstractCardRequest.py  Card.py  CardConnection.py  CardConnectionDecorator.py  CardConnectionEvent.py  CardConnectionObserver.py  CardMonitoring.py  CardNames.py  CardRequest.py  CardService.py  CardType.py  ChangeLog  ClassLoader.py  Exceptions.py  ExclusiveConnectCardConnection.py  ExclusiveTransmitCardConnection.py  Observer.py  PassThruCardService.py  README  ReaderMonitoring.py  Session.py  Synchronization.py  System.py  TODO  __init__.py  guid.py  setup.py  ulist.py
smartcard/doc/: conf.py  epydoc.cfg  framework-samples.html  generate.sh  index.html  index.rst  sync.sh  (+5 more)
test/: conftest.py  demoThaiNationalIDCard.python27.py  demoThaiNationalIDCard.python3.py  demoThaiNationalIDCardListDevice.python3.py  test_ATR.py  test_Exceptions.py  test_PCSC.py  test_PCSCExceptions.py  test_SCardGetErrorMessage.py  test_guid.py  test_observer.py  test_readergroups.py  test_synchronization.py  test_ulist.py  test_util.py
(+434 files in other folders)
